--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -24,37 +24,30 @@
     text-align: left;
    margin-bottom: 1.2rem;
    font-weight: 400;
-   
+   margin-left: 1.5rem;
    color: #3772ff;
 }
-.select-wrapper{
-    margin-bottom: 1.2rem;
-    
-    width: 45%;
-    font-size: 12px;
-    
+.timezone--wrapper{
+    margin-top: 1.5rem;
+    margin-left: 1.3rem;
+    margin-bottom: 2rem;
+    width: 75%;
 }
-.css-13cymwt-control{
-    border-radius: 12px!important;
-    border: 1px solid rgba(192, 188, 188, 0.116)!important;
-    font-size: 12.3px!important;
-    /* background: rgba(221, 214, 214, 0.555)!important;  */
-    box-shadow: rgba(106, 201, 207, 0.1) 0px 2px 4px!important;
-    background: #a5c0dd91!important;
-    
+.css-13cymwt-control {
+    border-radius: 15px!important;
+    background-color: rgba(225, 225, 231, 0.527)!important; 
+    border: 1px solid rgba(220, 220, 220, 0.212)!important; 
+    color: rgb(109, 108, 108)!important; 
+} 
+.css-1dimb5e-singleValue{
+    color: rgb(141, 139, 139)!important;
+    font-size: 13px!important;
 }
-.css-13cymwt-control:hover{
-    background: #caf0f8d5!important;
-    transition: .5s ease!important;
-    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 4px 2px!important;
+.css-1nmdiq5-menu{
+    /* background-color: red!important; */
+    z-index: 5!important;
+    font-size: 13.2px!important;
 }
-.css-1fdsijx-ValueContainer{
-    padding: 7px 8px!important;
-    
-}
-/* .css-1dimb5e-singleValue{
-    font-size: 14px!important;
-} */
 
 .detail-right
 {
@@ -67,7 +60,7 @@
     border: 1px solid rgba(0, 0, 0, 0.075); 
     /* padding: 20px; */
     border-radius: 10px;
-    width: 87%;
+    width: 90%;
     padding-bottom: 2rem;
      box-shadow: rgba(50, 50, 93, 0.178) 0px 4px 10px -2px, rgba(0, 0, 0, 0.3) 0px 3px 4px -3px;  
     /* box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px; */
@@ -89,7 +82,7 @@
     padding: 3rem 0;
 }
 .heading p{
-    padding-top: 1.5rem; 
+    padding-top: 1rem; 
     
     width: 90%;
     margin: auto;
@@ -122,7 +115,7 @@
     margin-left: 3rem;
     margin-right: 3rem;
     text-align: justify;
-    padding-bottom: 1.2rem;
+    padding-bottom: 1.5rem;
     font-size: 15px;
     font-family: sans-serif;
 }
