--- a/src/Components/Details/Form.css
+++ b/src/Components/Details/Form.css
@@ -1,6 +1,6 @@
 .form-body{
-    background: #0dcaf0;
-   padding: 1rem 1.5rem 3rem 1.5rem;
+    /* background:#86bbd8; */
+   padding: 1.5rem 1.5rem 1.5rem 1.5rem;
    border-bottom-left-radius: 15px;
    border-bottom-right-radius: 15px;
 }
@@ -8,7 +8,7 @@
     max-width: 45%;
 }
 .header-form{
-    background: #0dcaf0;
+    background: #86bbd8;
     border: none;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
@@ -21,21 +21,55 @@
     border-radius: 18px;
 }
 button.btn-close{
-    color: white!important;
+   font-size: 14px;
 }
 #example-custom-modal-styling-title{
     color: white;
-    padding: 10px 0 0 10px;
-   font-weight: 550;
+    padding: 0px 0 0 10px;
+   /* font-weight: 550; */
    font-family: sans-serif;
+   font-size: 22px;
 }
 .form-control{
+    background: rgba(245, 245, 245, 0.842)!important;
     border-radius: 10px!important;
     /* box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px!important; */
-    box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em!important;
+    /* box-shadow: rgba(67, 71, 85, 0.27) 0px 0px 0.25em, rgba(90, 125, 188, 0.05) 0px 0.25em 1em!important; */
+    height: 55px!important;
+    border: 1px solid #dee2e6b2;
+}
+.form-control:hover{
+    background: whitesmoke!important;
 }
 .form-floating>label{
     font-family: sans-serif!important;
     font-size: 14.3px!important;
     color: gray!important;
+    font-weight: 100!important;
+}
+.message-box{
+    height: 100px!important;
+}
+.terms-check{
+    margin-top: 1rem;
+}
+.form-label{ 
+    font-size: 15px;
+    
+}
+label{
+    font-family: sans-serif;
+    
+}
+.submit-btn{
+  border: none;
+  padding: 10px 18px;
+  border-radius: 10px;
+  background: #06aed5;
+  color: white;
+  font-family: sans-serif;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+}
+.submit-btn:hover{
+    background: #06afd5c9;
 }
