--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -9,9 +9,8 @@
     margin: auto!important;
     text-align: center!important;
     padding: 0 1rem 0rem 1rem!important;
-   
-     border: 1px solid #adb5bd46!important;
-    
+    border: 1px solid #adb5bd2f!important;
+    /* z-index: -5!important; */
 } 
 
 .jQMQWL:hover{
@@ -55,6 +54,7 @@
 .fiwjyf{
     font-size: 14px!important;
     line-height: 10px!important;
+    font-weight: bold!important; 
     
 }
 
@@ -63,15 +63,24 @@
 }
 .gWfzAA{
     padding: 15px 0 8px 0!important;
+    /* background: rgba(128, 128, 128, 0.062)!important; */
+    border-top-left-radius: 15px!important;
+    border-top-right-radius: 15px!important;
+}
+.gWfzAA:hover{
+    background: rgba(128, 128, 128, 0.062)!important;
 }
 .gWfzAA p{
     margin-bottom: 0.5rem!important;
 }
 .fukbtW{
     height: 185px!important;
+    grid-template-columns: repeat(4,1fr)!important;
     grid-gap: 8px!important;
+    grid-column-gap: 15px!important;
     border-top: 1px solid #6c757d59!important;
-    padding-top: 20px!important;
+    padding: 20px 2em 3em 2em!important;
+
 }
  .fukbtW::-webkit-scrollbar{
     width: 8px;
@@ -88,37 +97,27 @@
 .gWfzAA p{
     margin-top: 10px!important;
     font-family: sans-serif!important;
-    margin-bottom: 12px!important;
     color: blue!important;
+    font-size: 17px!important;
 }
-/* .gWfzAA p:nth-last-of-type(1){
-   
-    top: 0!important;
-}
-.gWfzAA p:nth-child(1){
-    color: blue!important; 
-    font-size: 16px!important;
-    position: absolute!important;
-    top: 2rem!important;
-    left: 10rem!important;
-}
-.gWfzAA p:nth-child(2n){
-   
-     color: blue!important; 
-}  */
+
 .hvtuvo{
     border-radius: 8px!important;
-    border: 1px solid #118ab283!important;
+    border: 1px solid #118ab25d!important;
     background: rgba(128, 128, 128, 0.116)!important;
 }
 .hvtuvo:nth-child(-n+10){
   
     display: none!important;
 }
-.hvtuvo:nth-child(even){
+.hvtuvo:nth-child(3n-5){
     pointer-events: none!important;
     opacity: 0.3;
 }
+ /* .hvtuvo:nth-child(4n-7){
+    pointer-events: none!important;
+    opacity: 0.3;
+}  */
 .hvtuvo:hover{
     background-color: #118ab29d!important;
     color: white!important;
@@ -136,8 +135,12 @@
     margin-top: 3rem!important;
     padding: 15px 20px!important;
     font-family: sans-serif!important;
-    background: #0dcaf0!important;
+    background: #5bc0eb!important;
     border-radius: 10px!important;
     font-weight: 550!important;
     font-size: 16px!important;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 2px 6px 2px!important;
+}
+.hqlASh:hover{
+    background: #3da5d9!important;
 }
