--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -30,25 +30,31 @@
 .timezonediv{
     margin-left: 1.5rem;
     margin-bottom: 1.5rem;
-    display: flex;
+   
 }
-.css-yk16xz-control{
+.timezone--wrapper{
+    width: 85%;
+    
+}
+.css-13cymwt-control{
     border-color: #e9ecef!important;
     background: #e9ecefa2!important; 
     border-radius: 18px!important;
    
 }
-
-.css-yk16xz-control:hover
+.css-13cymwt-control:hover
 {
     background: #e9ecefcc!important; 
 }
-#custom_timezone{
-    font-size: 14px!important;
-    z-index: 5!important;
+.css-1dimb5e-singleValue{
+    color: #6c757d!important;
+    font-size: 13.2px!important;
+    font-family: sans-serif!important;
 }
-.css-1uccc91-singleValue {
-    font-size: 14.2px!important;
+.css-1nmdiq5-menu{
+    font-size: 13.5px!important;
+    z-index: 5!important;
+    font-family: sans-serif!important;
 }
 .detail-right
 {
