changes-in formvalidation

--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -100,7 +100,7 @@
     /* padding-bottom: 1.5rem; */
     width: 85%;
     margin: auto;
-    color: blue;
+    color: #19A7CE;
     font-family: sans-serif;
 }
 .detail-body{
