--- a/src/Components/Details/calendarTimeslot.css
+++ b/src/Components/Details/calendarTimeslot.css
@@ -97,8 +97,9 @@
 .gWfzAA p{
     margin-top: 10px!important;
     font-family: sans-serif!important;
-    color: blue!important;
+    color: #F79327!important;
     font-size: 17px!important;
+    font-weight: bold!important;
 }
 
 .hvtuvo{
