--- a/src/Components/Details/Details.css
+++ b/src/Components/Details/Details.css
@@ -24,16 +24,16 @@
     text-align: left;
    margin-bottom: 1.2rem;
    font-weight: 400;
-   margin-left: 1.5rem;
+   margin-left: 0.5rem;
    color: #3772ff;
 }
 .timezonediv{
-    margin-left: 1.5rem;
+    margin-left: 0.5rem;
     margin-bottom: 1.5rem;
    
 }
 .timezone--wrapper{
-    width: 85%;
+    width: 70%;
     
 }
 .css-13cymwt-control{
@@ -46,6 +46,11 @@
 {
     background: #e9ecefcc!important; 
 }
+.css-1jqq78o-placeholder{
+    font-size: 14px!important;
+    font-family: sans-serif!important;
+    font-weight: bold!important;
+}
 .css-1dimb5e-singleValue{
     color: #6c757d!important;
     font-size: 13.2px!important;
@@ -55,6 +60,7 @@
     font-size: 13.5px!important;
     z-index: 5!important;
     font-family: sans-serif!important;
+   
 }
 .detail-right
 {
@@ -90,7 +96,8 @@
 }
 .heading p{
     padding-top: 1rem; 
-    
+    /* color: #00b4d8; */
+    color: #00bbf9;
     width: 90%;
     margin: auto;
     font-family: sans-serif;
