--- a/src/Components/Details/Form.css
+++ b/src/Components/Details/Form.css
@@ -39,6 +39,25 @@ button.btn-close{
     border-radius: 10px!important;
     border: 1px solid rgba(128, 128, 128, 0.123)!important;
 }
+.css-1jg2gny{
+    border-bottom-left-radius: 10px!important;
+    border-bottom-right-radius: 10px!important;
+    border-top-left-radius: 10px!important;
+    border-top-right-radius: 10px!important;
+    height: 55px!important;
+}
+.css-12n0rmb{
+    border-bottom-left-radius: 10px!important;
+    border-bottom-right-radius: 10px!important;
+    border-top-left-radius: 10px!important;
+    border-top-right-radius: 10px!important;
+}
+.css-14x1nlk{
+    font-size: 14px!important;
+}
+.css-1njz7x1{
+    font-size: 14px!important;
+}
 .css-e4w4as-MuiFormLabel-root-MuiInputLabel-root{
     font-size: 14px!important;
 }
@@ -49,6 +68,10 @@ input[type=number]::-webkit-inner-spin-button,
 input[type=number]::-webkit-outer-spin-button { 
     -webkit-appearance: none;
     appearance: none; 
+}
+label{
+    font-family: sans-serif;
+    font-size: 13.5px;
 }
 .buttonsubmit{
     margin-top: 1rem;
